<resources>
    <string name="app_name">Maps Playground</string>
    <string name="permission_rational">We will need your location to give you better experience</string>
    <string name="allow_your_location">Allow Your Location</string>
    <string name="continue_txt">Continue</string>
    <string name="playground">Playground</string>
    <string name="tracker">Tracker</string>
    <string name="maps_playground">Maps Playground</string>
    <string name="country_name">Country Name : %1$s</string>
    <string name="country_code">Country Code : %1$s</string>
    <string name="postal_code">Postal Code : %1$s</string>
    <string name="admin_area">Admin Area : %1$s</string>
    <string name="latitude">Latitude : %1$s</string>
    <string name="longitude">Longitude : %1$s</string>
    <string name="km">%1$s KM</string>
    <string name="_0_00_km">0.00 KM</string>
    <string name="min">%1$s min</string>
    <string name="getting_device_location">Getting Device Location...</string>
    <string name="start">Start</string>
    <string name="getting_ready">Getting Ready...</string>
</resources>