<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:paddingHorizontal="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/location_img"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="28dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/allow_your_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:textSize="18dp"
            android:textAlignment="center"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/permission_rational"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="24dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:background="@drawable/app_button_background"
            android:text="@string/continue_txt"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>